# vself-dao

./: .gitignore  Contract.md  EVENTS.md  HQ.md  LICENSE  README.md  index.html  package-lock.json  package.json  service.js
archive/: README.md
archive/deposits/src/: views.rs
archive/events_v1/: Cargo.toml  README.md  deploy.js  init.js
archive/events_v1/src/: constants.rs  lib.rs  nft.rs  views.rs
archive/linkdrop/: init.js
archive/linkdrop/src/: lib.rs
archive/nft_reward/: Cargo.toml  init.js
archive/pow/: test.js  upload_evidences.js
config/: deployment.env  testnet-account.env
contracts/: Cargo.toml  README.md  build.sh  deploy.sh  deploy.testnet.js  test.js  upload_evidences.js
contracts/bulletproof/: Cargo.toml
contracts/bulletproof/src/: lib.rs
contracts/communities/: Cargo.toml  deploy.js  deploy.sh
contracts/communities/src/: lib.rs
contracts/communities/tests/: create_communities.js  test.js
contracts/deposits/: Cargo.toml  compile.js  init.js
contracts/deposits/src/: lib.rs  views.rs
contracts/deposits/tests/: test.js
contracts/events/: Cargo.toml  compile.js  deploy.js  deploy.testnet.js  init.js
contracts/events/src/: constants.rs  lib.rs  nft.rs  views.rs
contracts/events/tests/: old_test.js  start_events.js  test.js  utils.js
contracts/linkdrop/: Cargo.toml  deploy.js
contracts/near-contract-standards/: Cargo.toml
contracts/near-contract-standards/src/non_fungible_token/core/: core_impl.rs  mod.rs
contracts/nft-reward/: Cargo.toml  init.js
contracts/nft-reward/src/: constants.rs  lib.rs
contracts/nft_reward/: deploy.js  deploy.testnet.js
contracts/nft_reward/src/: constants.rs  lib.rs
contracts/pow/: Cargo.toml  compile.js  deploy.testnet.js  init.js
contracts/pow/src/: lib.rs  views.rs
docs/: DESIGN.md  system  system.dsl
docs-archive/: DESIGN.md  system.dsl
sandbox/test_bulletproofs/: Cargo.toml
sandbox/test_bulletproofs/src/: lib.rs  r1cs_utils.rs
shared/: Cargo.toml
shared/src/: lib.rs
