[package]
name = "events"
version = "2.0.0"
authors = ["vSelf team <ie@vself.app>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#near-sdk = "4.1.0-pre.1"
near-sdk = "4.1.1"
#near-contract-standards = "4.0.0"
near-contract-standards = { path = "../near-contract-standards" }
hex = "0.4.3"
