[package]
name = "linkdrop"
authors = ["Near Inc <hello@nearprotocol.com>"]
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
#near-sdk = "4.0.0"
borsh = "0.9.3"
